# systemd-boot-gen

./: CHANGELOG  Cargo.toml  README.md
src/: entry.rs  main.rs  model.rs
