[package]
name = "systemd-boot-gen"
version = "1.2.0"
edition = "2018"
authors = ["Paul Alesius <paul@unnservice.com>", "Rafael Delgado Martins <rafael@delgadomartins.com>"]
repository = "https://github.com/unnservice/systemd-boot-gen"
license = "GPL-3.0-or-later"
description = "systemd-boot boot configuration generator"
categories = ["command-line-utilities"]

[dependencies]
regex = "1.5.4"
dotenv = "0.15.0"
alphanumeric-sort = "1.4.3"
clap = "2.33.3"
